# ghostbin

./: .gitignore  App.tsx  LICENSE  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  model.rs  repository.rs
backend/tests/: api_tests.rs
components/: AboutPage.tsx  Button.tsx  CreatePaste.tsx  Layout.tsx  ViewPaste.tsx
components/CreatePaste/: PasteEditorArea.tsx  PasteOptionsBar.tsx  PasteSuccessView.tsx
components/ViewPaste/: PasswordRequest.tsx  PasteContent.tsx  StatusViews.tsx
docker/: backend.Dockerfile  frontend.Dockerfile
hooks/: usePasteCreation.ts  usePasteViewer.ts
lib/: constants.ts  encoding.ts
nginx/: nginx.conf
services/: cryptoService.ts  storageService.ts
src/: index.css  index.tsx
tor/: Dockerfile  entrypoint.sh  torrc
workers/: pow.worker.ts
