[package]
name = "ghostbin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"
constant_time_eq = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
deadpool-redis = "0.22.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
serial_test = "3.0"
